add user list response
