# docs/swagger.json
@@ -32,7 +32,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.User"
+                                "$ref": "#/definitions/user.UserListResponse"
                             }
                         }
                     },
@@ -44,13 +44,19 @@
         }
     },
     "definitions": {
-        "entity.User": {
+        "user.UserListResponse": {
             "type": "object",
             "properties": {
                 "address": {
                     "type": "string"
                 },
                 "contact": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "email": {
@@ -62,25 +68,25 @@
                 "id": {
                     "type": "integer"
                 },
+                "last_login_at": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
                 "office": {
                     "type": "integer"
                 },
-                "password": {
-                    "type": "string"
-                },
                 "photo": {
-                    "type": "string"
-                },
-                "remember_token": {
                     "type": "string"
                 },
                 "role": {
                     "type": "integer"
                 },
                 "staff_id": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 },
                 "username": {
